Andrian-iptables.txt
# Generated by iptables-save v1.3.5 on Wed Feb 20 17:06:23 2008
*filter
:FORWARD ACCEPT [0:0]
:INPUT DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state INVALID -j LOG
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT

# SSH
###-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT -s 172.19.41.37
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT -s 172.19.40.129
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT -s 172.19.40.227

# LDAP
###-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 389,636

# WebADM
###-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.2
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.5
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.7
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.8
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.10
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.11
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.15
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.17
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.18
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.19
#-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.22
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.26
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.30.28
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.41.37
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.40.129
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports 443,8080,8443 -s 172.19.40.227

#UEB agent setup
-A INPUT -p tcp -s 172.19.30.11 --dport 1743 -j ACCEPT
-A INPUT -p tcp -s 172.19.30.11 --dport 1745 -j ACCEPT

# Webmin
###-A INPUT -p tcp -m tcp --dport 10000 -j ACCEPT

# RADIUS
###-A INPUT -p udp -m udp --dport 1812 -j ACCEPT
# ICMP Ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m state --state NEW -j DROP
-A INPUT -j LOG
COMMIT
# Completed on Wed Feb 20 17:06:23 2008
# Generated by iptables-save v1.3.5 on Wed Feb 20 17:06:23 2008
*mangle
:PREROUTING ACCEPT [110:7112]
:INPUT ACCEPT [110:7112]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [81:10580]
:POSTROUTING ACCEPT [81:10580]
COMMIT
# Completed on Wed Feb 20 17:06:23 2008
# Generated by iptables-save v1.3.5 on Wed Feb 20 17:06:23 2008
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [1:100]
:OUTPUT ACCEPT [1:100]
COMMIT
# Completed on Wed Feb 20 17:06:23 2008
