iptables.txt
# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#Ping vig provaydera
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
# Block
-A INPUT -f -j DROP
# Block mail from 15.1.23.22
-A INPUT -s 15.1.23.22 -p tcp --dport 25 -j DROP
#Block  All packed from 160.25.0.0/24
-A INPUT -s 160.25.0.0/24 -j DROP
#-A INPUT -p tcp -m state --state NEW --dport 25 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports smtp,465,ftp -j ACCEPT
-A INPUT -i eno33554984 -p tcp -m state --state NEW -m multiport --dports pop3,pop3s  -j ACCEPT
-A INPUT -i eno16777736 -p tcp -m state --state NEW -m multiport --dports imap,imaps  -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
# FOOOOOOOOOOO
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
#ADD Ping between networks without NAT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -f -j DROP
-A FORWARD -p tcp -m state --state NEW -m multiport --dports ssh,telnet,53,smtp,http,https,ftp -j ACCEPT
-A FORWARD -p udp -m state --state NEW --dport 53 -j ACCEPT
# Proxy provaydera ip 192.168.100.100
-A FORWARD -d 192.168.100.100  -p tcp -m state --state NEW --dport squid -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
*nat
# DNAT na web server
-A PREROUTING -i eno16777736 -p tcp --dport 80 -j DNAT --to 192.168.200.101:80
-A PREROUTING -i eno16777736 -p tcp --dport 443 -j DNAT --to 192.168.200.101:443

# SNAT on out interface
-A POSTROUTING -o eno16777736  -j MASQUERADE
COMMIT
